@@ -4,26 +4,34 @@
 <!--// $Id$ //-->
 <H1>{$layout.pagetitle}</H1>
 <TABLE class="lmsbox">
+	<COLGROUP>
+		<COL style="width: 1%;">
+		<COL style="width: 10%;">
+		<COL style="width: 86%;">
+		<COL style="width: 1%;">
+		<COL style="width: 1%;">
+		<COL style="width: 1%;">
+	</COLGROUP>
     <THEAD>
 	<TR>
-		<TD width="11%" NOWRAP>
+		<TD class="nobr" style="min-width: 70px;">
+			{trans("Type:")}
+		</TD>
+		<TD class="nobr">
 			<IMG src="img/time.gif" alt=""> <B>{trans("Time:")}</B><BR>
-			<IMG src="img/users.gif" alt=""> {trans("Created by:")}
-		</TD>
-		<TD width="86%" NOWRAP>
-			<IMG src="img/calendar.gif" alt=""> [{trans("Type")}] <B>{trans("Title:")}</B><BR>
-			<IMG src="img/info1.gif" alt=""> {trans("Description:")}
-		</TD>
-		<TD width="1%" NOWRAP>
 			<IMG src="img/users.gif" alt=""> {trans("User:")}
 		</TD>
-		<TD width="1%" NOWRAP>
+		<TD class="nobr">
+			<IMG src="img/calendar.gif" alt=""> <B>{trans("Title:")}</B><BR>
+			<IMG src="img/info1.gif" alt=""> {trans("Description:")}
+		</TD>
+		<TD class="nobr">
 			<IMG src="img/customer.gif" alt=""> {trans("Customer:")}
 		</TD>
-		<TD width="1%" NOWRAP></TD>
+		<TD class="nobr"></TD>
 	</TR>
 	<TR>
-		<TD colspan="5" align="center" NOWRAP>
+		<TD colspan="5" class="text-center nobr">
 			<A href="?m=eventlist&amp;day=1&amp;month={if $month==1}12{else}{math equation="x-1" x=$month}{/if}&amp;year={if $month==1}{math equation="x-1" x=$year}{else}{$year}{/if}">&laquo;&laquo;&laquo;&nbsp;</A>
 			{section name=days loop=$days.day}
 				{if !$days.dow[days]}<span class="light">{/if}<A href="?m=eventlist&amp;day={$days.day[days]}&amp;month={$month}&amp;year={$year}">&nbsp;{if $days.sel[days]}<B>*{/if}{$days.day[days]|string_format:"%d"}{if $days.sel[days]}*</B>{/if} </A>{if !$days.dow[days]}</span>{/if}
@@ -32,7 +40,7 @@
 		</TD>
 	</TR>
 	<TR>
-		<TD colspan="5" NOWRAP>
+		<TD colspan="5" class="nobr">
 			<FORM method="POST" action="?m=eventlist" name="filter">
 				<INPUT type="submit" class="hiddenbtn">
 				<INPUT type="HIDDEN" name="m" value="eventlist">
@@ -97,7 +105,7 @@
 	{cycle values="light,lucid" print=false}
 	{section name=daylist loop=$daylist}
 	<TR>
-		<TD width="100%" colspan="6">
+		<TD colspan="5">
                     <TABLE class="lmsbox">
                         <THEAD>
                             <TR{if $daylist[daylist] == $today} class="superdark"{/if}>
@@ -111,7 +119,7 @@
                                         <span style="color: red;">{trans("Holiday:")} {$getHolidays[$daylist[daylist]]}</span>
                                     {/if}
                                 </TD>
-                                <TD width="3%" colspan="3" align="right" nowrap>
+                                <TD width="3%" colspan="2" align="right" nowrap>
                                     <A href="?m=eventprint&day={$daylist[daylist]}&u={$listdata.customerid}&a={$listdata.userid}&privacy={$listdata.privacy}" target="_BLANK">{trans("Print")} <IMG src="img/print.gif" alt=""></A>
                                     <A href="?m=eventadd&amp;day={$daylist[daylist]|date_format:"%d"}&amp;month={$daylist[daylist]|date_format:"%m"}&amp;year={$daylist[daylist]|date_format:"%Y"}">{trans("Add Event")} <IMG src="img/save.gif" alt=""></A>&nbsp;
                                 </TD>
@@ -124,24 +132,23 @@
                             {if $eventlist[eventlist].date == $daylist[daylist]}
                             {math equation="x+1" x=$counter assign=counter}
                             <TR class="highlight {cycle}{if $eventlist[eventlist].closed} blend{/if}"  >
-                                <TD style="background-color:{if $_EVENTCOLORS[$eventlist[eventlist].type]}{$_EVENTCOLORS[$eventlist[eventlist].type]}{else}transparent{/if}" width="1%"></td>
-                                <TD width="1%" align="left" onClick="return self.location.href='?m=eventinfo&amp;id={$eventlist[eventlist].id}'" nowrap>
-                                        <IMG src="img/time.gif" alt=""><B>
+                                <TD style="width: 1%; min-width: 70px; {if isset($_EVENTSTYLES[$eventlist[eventlist].type])} {$_EVENTSTYLES[$eventlist[eventlist].type]}{/if}" class="text-center bold">
+                                	{$_EVENTTYPES[$eventlist[eventlist].type]}
+                                </td>
+                                <TD style="width: 1%;" class="text-left nobr" onClick="return self.location.href='?m=eventinfo&amp;id={$eventlist[eventlist].id}'">
+                                        <span class="bold">
                                         {math equation="floor(x/100)" x=$eventlist[eventlist].begintime format="%02d"}:{math equation="x % 100" x=$eventlist[eventlist].begintime format="%02d"}
                                         {if $eventlist[eventlist].begintime != $eventlist[eventlist].endtime}
                                         - {math equation="floor(x/100)" x=$eventlist[eventlist].endtime format="%02d"}:{math equation="x % 100" x=$eventlist[eventlist].endtime format="%02d"}
-                                        {/if}</B><BR>
-                                        <IMG src="img/users.gif" alt=""> <A href="?m=userinfo&amp;id={$eventlist[eventlist].userid}">{$eventlist[eventlist].username|truncate:"25":"...":true}</A>
+                                        {/if}</span><BR>
+										{foreach $eventlist[eventlist].userlist as $user}
+											<A href="?m=userinfo&amp;id={$user.id}">{$user.name|truncate:"25":"...":true}</A><BR>
+										{/foreach}
                                 </TD>
                                 <TD width="95%" valign="top" onClick="return self.location.href='?m=eventinfo&amp;id={$eventlist[eventlist].id}'">
-                                        <IMG src="img/calendar.gif" alt=""> [{$_EVENTTYPES[$eventlist[eventlist].type]}] <B>{$eventlist[eventlist].title}</B><BR>
+                                        <IMG src="img/calendar.gif" alt=""><B>{$eventlist[eventlist].title}</B><BR>
                                         {if $eventlist[eventlist].description != ''}<IMG src="img/info1.gif" alt=""> {$eventlist[eventlist].description}{/if}<br/>
                                         {if $eventlist[eventlist].note != ''}<span{if !$eventlist[eventlist].closed} style="color: red;"{/if}><IMG src="img/info.gif" alt="" /> {$eventlist[eventlist].note}</span>{/if}
-                                </TD>
-                                <TD width="1%" class="nobr">
-                                        {foreach item=user from=$eventlist[eventlist].userlist}
-                                                <A href="?m=userinfo&amp;id={$user.id}">{$user.name|truncate:"25":"...":true}</A><BR>
-                                        {/foreach}
                                 </TD>
                                 <TD width="1%" nowrap>
                                         {if $eventlist[eventlist].customername}
