@@ -28,6 +28,7 @@ version ?.??.?? (????-??-??):
     to given network device [kosa/chilan]
   - log customer properties changes after commit userpanel changes from LMS UI [chilan]
   - added new doc types (price-list, promotion, warranty, regulations) [kyob]
+  - visual improvements of event list [kyob/chilan]
 
 version 1.11.20 (2016-04-19):
 
